# retryhttp

./: .gitignore  .readthedocs.yml  README.md  hack.py  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
docs/: api.md  changelog.md  guide.md  index.md
docs/css/: custom.css  mkdocstrings.css
retryhttp/: __init__.py  _constants.py  _retry.py  _types.py  _utils.py  _wait.py  constants.py  helpers.py  retry.py  wait.py
tenacity_httpx/: __init__.py
tests/: conftest.py  test_rate_limited.py  test_retry.py  test_retry_http_errors.py  test_tenacity_httpx.py  test_wait.py
